syntax = "proto3";
import "adpolicy.proto";
import "pricing.proto";

option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

message IsServiceAllowedRequest {

  int32 groupId = 1;
  int64 domainId = 2;
  service Service = 3;

  enum service
  {
    Unknown = 0;
    CatchUp = 1;
    StartOver = 2;
    NPVR = 3;
    Download = 4;
    AdsControl = 5;
  }

}

message AdsControlData {
  int32 FileId = 1;
  string FileType = 2;
  string AdsParam = 3;
  AdsPolicy AdsPolicy = 4;
}

message GetDomainAdsControlRequest {
  int32 groupId = 1;
  int64 domainId = 2;
}
message  GetDomainAdsControlResponse{
  AdsControlData AdsControlData = 1;
}

message GetPPVModuleDataRequest {
  int32 GroupId = 1;
  string sPPVCode = 2;
  string udid = 3;
}

message GetPPVModuleDataResponse{
  AdsControlData AdsControlData = 1;
}

message HandlePlayUsesRequest{
  int32 groupId = 1;
  MediaFileItemPrice price = 2;
  int64 userId = 3;
  int32 mediaFileId = 4; 
  string ip = 5;
  string countryCode = 6; 
  string languageCode = 7; 
  string udid = 8; 
  string couponCode = 9; 
  int64 domainId = 10;
  bool isLive = 11;
}